[workspace]
resolver = "2"
members = ["gr6j-core", "gr6j-python"]

[workspace.dependencies]
pyo3 = { version = "0.20.0", default-features = false }
pyo3-log = "0.9.0"
chrono = { version = "0.4.34" }
thiserror = "1.0.58"
log = "0.4.21"
env_logger = "0.11.3"
# TODO master includes unreleased bugfixes
plotters = { git = "https://github.com/plotters-rs/plotters/" }
csv = "1.3.0"
ndarray = "0.15.6"
ordered-float = "4.2.0"
float-cmp = "0.9.0"
