[package]
name = "gr6j-core"
version = "1.0.0"
authors = ["Stefano Simoncelli <stefano@simoncelli.co>"]
edition = "2021"
description = "A Rust implementation of the air-GR6J model."
readme = "README.md"
repository = "https://github.com/s-simoncelli/GR6J/"
license = "GPL-3"
keywords = ["simulation", "runoff", "water", "gr6j", "modelling"]
categories = ["science", "simulation"]

[lib]
name = "gr6j"

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
plotters = { workspace = true }
csv = { workspace = true }
ndarray = { workspace = true }
ordered-float = { workspace = true }
float-cmp = { workspace = true }
egobox-doe = "0.18.1"
rayon = "1.10.0"
